# canvas-kid

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp
gui/: animation.cpp  animation.h  canvas.cpp  canvas.h  sidebar.cpp  sidebar.h  viewport.cpp  viewport.h  window.cpp  window.h
primitives/: circle.cpp  circle.h  colors.cpp  colors.h  graph_circle.cpp  graph_circle.h  graph_line.cpp  graph_line.h  graph_point.cpp  graph_point.h  line.cpp  line.h  point.cpp  point.h
structures/: action.cpp  action.h  stack.cpp  stack.h
